Prevent using file system when downloading certificate from AIA URL (#808)